--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://192.1.0.198:5432/hosttohost
-spring.datasource.username=BRMTHTHMS
-spring.datasource.password=c67Am9AH5uPd6Z6TdBRK
+spring.datasource.username=BRMTBUS
+spring.datasource.password=BRMTBUSCALIDAD
+spring.jpa.generate-ddl=true
